Removing unnecessary code and fixing the slider's behavior on mobile devices

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -505,6 +505,7 @@ graphical-filter-control {
 
 .slider-control {
 	display: inline-block;
+	touch-action: none;
 	padding-top: var(--extra-touch-padding-top);
 	height: var(--button-size);
 }
